basic MVVM structure added to editor code andconnection code started

--- a/3dArkanoidsEditor/3dArkanoidsEditor.csproj
+++ b/3dArkanoidsEditor/3dArkanoidsEditor.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Grpc.Net.Client" Version="2.45.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
