--- a/3dArkanoids/3dArkanoids.vcxproj.filters
+++ b/3dArkanoids/3dArkanoids.vcxproj.filters
@@ -84,12 +84,6 @@
     <ClCompile Include="PlayBoardEditImpl.cpp">
       <Filter>Source Files\game\level editor server\grpc</Filter>
     </ClCompile>
-    <ClCompile Include="PlayBoardEdit.grpc.pb.cc">
-      <Filter>Source Files\game\level editor server\grpc</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayBoardEdit.pb.cc">
-      <Filter>Source Files\game\level editor server\grpc</Filter>
-    </ClCompile>
     <ClCompile Include="GrpcLevelEditorServer.cpp">
       <Filter>Source Files\game\level editor server\grpc</Filter>
     </ClCompile>
@@ -98,6 +92,12 @@
     </ClCompile>
     <ClCompile Include="PlayboardEditAsyncImpl.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="editor_proto_files\PlayBoardEdit.grpc.pb.cc">
+      <Filter>Source Files\game\level editor server\grpc</Filter>
+    </ClCompile>
+    <ClCompile Include="editor_proto_files\PlayBoardEdit.pb.cc">
+      <Filter>Source Files\game\level editor server\grpc</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
