--- a/3dArkanoidsEditor/3dArkanoidsEditor.csproj
+++ b/3dArkanoidsEditor/3dArkanoidsEditor.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Google.Protobuf" Version="3.20.1" />
     <PackageReference Include="Grpc" Version="2.45.0" />
     <PackageReference Include="Grpc.Net.Client" Version="2.45.0" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+    <PackageReference Include="Simple.Wpf.Terminal" Version="2.3.47" />
   </ItemGroup>
 
 </Project>
