--- a/3dArkanoids/3dArkanoids.vcxproj
+++ b/3dArkanoids/3dArkanoids.vcxproj
@@ -162,14 +162,14 @@
     <ClCompile Include="BlockInstanceRenderData.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CubeDrawer.cpp" />
-    <ClCompile Include="editor_proto_files\PlayBoardEdit.grpc.pb.cc" />
-    <ClCompile Include="editor_proto_files\PlayBoardEdit.pb.cc" />
     <ClCompile Include="FallingBlock.cpp" />
     <ClCompile Include="FallingBlockManager.cpp" />
     <ClCompile Include="FrameMemoryAllocator.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="GrpcLevelEditorServer.cpp" />
+    <ClCompile Include="PlayBoardEdit.grpc.pb.cc" />
+    <ClCompile Include="PlayBoardEdit.pb.cc" />
     <ClCompile Include="PlayboardEditAsyncImpl.cpp" />
     <ClCompile Include="PlayBoardEditImpl.cpp" />
     <ClCompile Include="main.cpp" />
