--- a/3dArkanoids/3dArkanoids.vcxproj.filters
+++ b/3dArkanoids/3dArkanoids.vcxproj.filters
@@ -118,7 +118,7 @@
       <Filter>Source Files\game</Filter>
     </ClCompile>
     <ClCompile Include="GameUiOverlay.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -243,7 +243,7 @@
       <Filter>Header Files\game</Filter>
     </ClInclude>
     <ClInclude Include="GameUiOverlay.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\game</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
