GameFrameworkMessageRecipientBase<T> class added and GameFramework::SendFrameworkMessage<T> to implement a mediator pattern

--- a/3dArkanoids/3dArkanoids.vcxproj
+++ b/3dArkanoids/3dArkanoids.vcxproj
@@ -202,6 +202,7 @@
     <ClInclude Include="GameBlockTypes.h" />
     <ClInclude Include="GameFramework.h" />
     <ClInclude Include="GameInput.h" />
+    <ClInclude Include="GameToUiMessage.h" />
     <ClInclude Include="GameUiOverlay.h" />
     <ClInclude Include="GrpcLevelEditorServer.h" />
     <ClInclude Include="ISerializable.h" />
