--- a/3dArkanoids/3dArkanoids.vcxproj
+++ b/3dArkanoids/3dArkanoids.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="GLTextureHelper.cpp" />
     <ClCompile Include="GrpcLevelEditorServer.cpp" />
+    <ClCompile Include="ISerializable.cpp" />
     <ClCompile Include="PlayBoardEdit.grpc.pb.cc" />
     <ClCompile Include="PlayBoardEdit.pb.cc" />
     <ClCompile Include="PlayboardEditAsyncImpl.cpp" />
