--- a/3dArkanoids/3dArkanoids.vcxproj
+++ b/3dArkanoids/3dArkanoids.vcxproj
@@ -182,8 +182,10 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MockLevelLoader.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="SimplexNoise.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="stbi_image.cpp" />
+    <ClCompile Include="Terrain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array3d.h" />
@@ -226,11 +228,14 @@
     <ClInclude Include="PlayfieldDefs.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="SimplexNoise.h" />
     <ClInclude Include="SizedQueue.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="stb_image_resize.h" />
     <ClInclude Include="stb_image_write.h" />
+    <ClInclude Include="Terrain.h" />
+    <ClInclude Include="transvoxel.h" />
     <ClInclude Include="TSQueue.h" />
     <ClInclude Include="typedefs.h" />
   </ItemGroup>
