ISerializable.h split up into multiple headers, some now unused files deleted

--- a/3dArkanoids/3dArkanoids.vcxproj
+++ b/3dArkanoids/3dArkanoids.vcxproj
@@ -174,13 +174,12 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="GLTextureHelper.cpp" />
     <ClCompile Include="GrpcLevelEditorServer.cpp" />
-    <ClCompile Include="ISerializable.cpp" />
+    <ClCompile Include="SerializationFunctions.cpp" />
     <ClCompile Include="PlayBoardEdit.grpc.pb.cc" />
     <ClCompile Include="PlayBoardEdit.pb.cc" />
     <ClCompile Include="PlayboardEditAsyncImpl.cpp" />
     <ClCompile Include="PlayBoardEditImpl.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="MockLevelLoader.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="SimplexNoise.cpp" />
     <ClCompile Include="Sphere.cpp" />
@@ -213,20 +212,21 @@
     <ClInclude Include="GLTextureHelper.h" />
     <ClInclude Include="GrpcLevelEditorServer.h" />
     <ClInclude Include="ISerializable.h" />
+    <ClInclude Include="ISerializablePropertiesNode.h" />
     <ClInclude Include="PlayboardEditAsyncImpl.h" />
     <ClInclude Include="PlayBoardEditImpl.h" />
     <ClInclude Include="ILevelEditorServerGame.h" />
     <ClInclude Include="ILevelEditorServer.h" />
-    <ClInclude Include="ILevelLoader.h" />
     <ClInclude Include="IRenderer.h" />
     <ClInclude Include="LevelEditorServerFactoryTypedef.h" />
     <ClInclude Include="MasterArrayUpdatedEventArgs.h" />
-    <ClInclude Include="MockLevelLoader.h" />
-    <ClInclude Include="MockLoaderLevelData.h" />
     <ClInclude Include="PlayBoardEdit.grpc.pb.h" />
     <ClInclude Include="PlayBoardEdit.pb.h" />
     <ClInclude Include="PlayfieldDefs.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="SerializableProperty.h" />
+    <ClInclude Include="SerializablePropertyType.h" />
+    <ClInclude Include="SerializationFunctions.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SimplexNoise.h" />
     <ClInclude Include="SizedQueue.h" />
