CallData made a template class, GRPCLevelEdotrServer split up into multiple files

--- a/3dArkanoids/3dArkanoids.vcxproj
+++ b/3dArkanoids/3dArkanoids.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="Bat.cpp" />
     <ClCompile Include="BlockInstanceRenderData.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ChangeBlockCallData.cpp" />
     <ClCompile Include="CubeDrawer.cpp" />
     <ClCompile Include="FallingBlock.cpp" />
     <ClCompile Include="FallingBlockManager.cpp" />
@@ -171,16 +172,20 @@
     <ClCompile Include="GameBlockTypes.cpp" />
     <ClCompile Include="GameFramework.cpp" />
     <ClCompile Include="GameUiOverlay.cpp" />
+    <ClCompile Include="GetBoardStateCallData.cpp" />
+    <ClCompile Include="GetSerializableNodesCallData.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="GLTextureHelper.cpp" />
     <ClCompile Include="GrpcLevelEditorServer.cpp" />
+    <ClCompile Include="InitialConnectionHandshakeCallData.cpp" />
     <ClCompile Include="SerializationFunctions.cpp" />
     <ClCompile Include="PlayBoardEdit.grpc.pb.cc" />
     <ClCompile Include="PlayBoardEdit.pb.cc" />
     <ClCompile Include="PlayboardEditAsyncImpl.cpp" />
-    <ClCompile Include="PlayBoardEditImpl.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="SetBoardStateCallData.cpp" />
+    <ClCompile Include="SetSerializablePropertyCallData.cpp" />
     <ClCompile Include="SimplexNoise.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="stbi_image.cpp" />
@@ -194,6 +199,7 @@
     <ClInclude Include="BlockColourDefs.h" />
     <ClInclude Include="BlockInstanceRenderData.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ChangeBlockCallData.h" />
     <ClInclude Include="CubeDrawer.h" />
     <ClInclude Include="EngineUpdateFrameEventArgs.h" />
     <ClInclude Include="ErrorHandling.h" />
@@ -208,12 +214,16 @@
     <ClInclude Include="GameInput.h" />
     <ClInclude Include="GameToUiMessage.h" />
     <ClInclude Include="GameUiOverlay.h" />
+    <ClInclude Include="GetBoardStateCallData.h" />
+    <ClInclude Include="GetSerializableNodesCallData.h" />
     <ClInclude Include="GLTextureHelper.h" />
+    <ClInclude Include="GRPCCallData.h" />
     <ClInclude Include="GrpcLevelEditorServer.h" />
+    <ClInclude Include="InitialConnectionHandshakeCallData.h" />
+    <ClInclude Include="IProceed.h" />
     <ClInclude Include="ISerializable.h" />
     <ClInclude Include="ISerializablePropertiesNode.h" />
     <ClInclude Include="PlayboardEditAsyncImpl.h" />
-    <ClInclude Include="PlayBoardEditImpl.h" />
     <ClInclude Include="ILevelEditorServerGame.h" />
     <ClInclude Include="ILevelEditorServer.h" />
     <ClInclude Include="IRenderer.h" />
@@ -226,6 +236,8 @@
     <ClInclude Include="SerializableProperty.h" />
     <ClInclude Include="SerializablePropertyType.h" />
     <ClInclude Include="SerializationFunctions.h" />
+    <ClInclude Include="SetBoardStateCallData.h" />
+    <ClInclude Include="SetSerializablePropertyCallData.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SimplexNoise.h" />
     <ClInclude Include="SizedQueue.h" />
