--- a/3dArkanoids/3dArkanoids.vcxproj
+++ b/3dArkanoids/3dArkanoids.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="GameUiOverlay.cpp" />
     <ClCompile Include="GetBoardStateCallData.cpp" />
     <ClCompile Include="GetSerializableNodesCallData.cpp" />
+    <ClCompile Include="GetUpdatedBoardStreamCallData.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="GLTextureHelper.cpp" />
     <ClCompile Include="GrpcLevelEditorServer.cpp" />
@@ -216,9 +217,11 @@
     <ClInclude Include="GameUiOverlay.h" />
     <ClInclude Include="GetBoardStateCallData.h" />
     <ClInclude Include="GetSerializableNodesCallData.h" />
+    <ClInclude Include="GetUpdatedBoardStreamCallData.h" />
     <ClInclude Include="GLTextureHelper.h" />
     <ClInclude Include="GRPCCallData.h" />
     <ClInclude Include="GrpcLevelEditorServer.h" />
+    <ClInclude Include="GRPCStreamingCallData.h" />
     <ClInclude Include="InitialConnectionHandshakeCallData.h" />
     <ClInclude Include="IProceed.h" />
     <ClInclude Include="ISerializable.h" />
