--- a/3dArkanoids/3dArkanoids.vcxproj
+++ b/3dArkanoids/3dArkanoids.vcxproj
@@ -191,10 +191,12 @@
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="stbi_image.cpp" />
     <ClCompile Include="Terrain.cpp" />
+    <ClCompile Include="VisualEffectsManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array3d.h" />
     <ClInclude Include="AutoList.h" />
+    <ClInclude Include="BallComboEventArgs.h" />
     <ClInclude Include="BallManager.h" />
     <ClInclude Include="Bat.h" />
     <ClInclude Include="BlockColourDefs.h" />
@@ -252,6 +254,7 @@
     <ClInclude Include="transvoxel.h" />
     <ClInclude Include="TSQueue.h" />
     <ClInclude Include="typedefs.h" />
+    <ClInclude Include="VisualEffectsManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
